--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,12 @@
       <version>6.10</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.testng</groupId>
+      <artifactId>testng</artifactId>
+      <version>7.0.0-beta7</version>
+      <scope>compile</scope>
+    </dependency>
 
   </dependencies>
 
